ci: remove test and release cron
Signed-off-by: FrexCheat <frexcheat@163.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,5 @@
 on:
-  push:
-    branches: [master]
-    paths:
-      - '**.sh'
-      - '.github/workflows/**'
-      - 'build-container/**'
-      - 'packages/**'
-  schedule:
-    - cron: "4 2 * * *"
+  workflow_dispatch:
 
 name: Release
 
